--- a/apps/web-astro/src/components/stores-page/FilterControls.astro
+++ b/apps/web-astro/src/components/stores-page/FilterControls.astro
@@ -20,8 +20,7 @@ const rangeOptions = [5, 10, 20, 50, 100];
 <div class="overflow-x-auto overflow-y-hidden whitespace-nowrap">
 	<div class="my-2 flex justify-between">
 		<div class="flex gap-2">
-			<div
-				class="bg-muted text-muted-foreground grid w-fit min-w-48 grid-cols-2 items-center justify-center rounded-lg p-1">
+			<div class="bg-muted text-muted-foreground flex w-fit items-center justify-center rounded-lg p-1">
 				<a
 					class={buttonVariants({ variant: "ghost" }) +
 						`${orderType === "delivery" ? " bg-background text-foreground shadow hover:bg-background/80" : ""}`}
