--- a/apps/web-astro/src/pages/order/[orderId]/index.astro
+++ b/apps/web-astro/src/pages/order/[orderId]/index.astro
@@ -13,20 +13,25 @@ const { orderId } = Astro.params;
 		import { authGlobalApiClient } from "@api-client/auth_global";
 		import { toast } from "@/ui-plus/sonner";
 
-		const orderElement = document.querySelector<HTMLDivElement>("[data-order-id]");
-		const { data, error } = await (
-			await authGlobalApiClient[":orderId"].details.$get({
-				param: {
-					orderId: orderElement?.dataset.orderId ?? ""
-				}
-			})
-		).json();
-		if (error) {
-			console.error(error);
-			toast.error(error.message ?? "An unknown error occurred");
-		} else {
-			console.log(data);
-			document.getElementById("order-details")!.textContent = JSON.stringify(data, null, 2);
+		async function loadData() {
+			const orderElement = document.querySelector<HTMLDivElement>("[data-order-id]");
+			const { data, error } = await (
+				await authGlobalApiClient[":orderId"].details.$get({
+					param: {
+						orderId: orderElement?.dataset.orderId ?? ""
+					}
+				})
+			).json();
+			if (error) {
+				console.error(error);
+				toast.error(error.message ?? "An unknown error occurred");
+			} else {
+				console.log(data);
+				document.getElementById("order-details")!.textContent = JSON.stringify(data, null, 2);
+			}
 		}
+		setTimeout(() => {
+			loadData();
+		}, 1000);
 	</script>
 </BaseLayout>
