--- a/packages/ui-shadcn-vue/src/index.css
+++ b/packages/ui-shadcn-vue/src/index.css
@@ -106,8 +106,22 @@
 	font-family: unset;
 }
 
+@layer utilities {
 
-/* ANIMATIONS */
+	/* Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	.no-scrollbar {
+		-ms-overflow-style: none;
+		/* IE and Edge */
+		scrollbar-width: none;
+		/* Firefox */
+	}
+}
+
+/* ANIMATIONS  START*/
 .headShake-animation {
 	animation: headShake 0.5s;
 }
@@ -168,39 +182,9 @@
 	}
 }
 
-@layer utilities {
-
-	/* Chrome, Safari and Opera */
-	.no-scrollbar::-webkit-scrollbar {
-		display: none;
-	}
-
-	.no-scrollbar {
-		-ms-overflow-style: none;
-		/* IE and Edge */
-		scrollbar-width: none;
-		/* Firefox */
-	}
-}
-
-
 .pulse {
 	box-shadow: 0 0 0 hsl(var(--destructive) / 0.6);
 	animation: pulse 2s infinite;
-}
-
-@-webkit-keyframes pulse {
-	0% {
-		-webkit-box-shadow: 0 0 0 0 hsl(var(--destructive) / 0.6);
-	}
-
-	70% {
-		-webkit-box-shadow: 0 0 0 10px hsl(var(--destructive) / 0.3);
-	}
-
-	100% {
-		-webkit-box-shadow: 0 0 0 0 hsl(var(--destructive) / 0);
-	}
 }
 
 @keyframes pulse {
@@ -219,3 +203,78 @@
 		box-shadow: 0 0 0 0 hsl(var(--destructive) / 0);
 	}
 }
+
+.animate__tada {
+	animation: tada-with-delay 3s infinite;
+}
+
+@keyframes tada-with-delay {
+
+	0%,
+	33.33% {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+
+	3.33%,
+	6.67% {
+		-webkit-transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+		transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+	}
+
+	10%,
+	16.67%,
+	23.33%,
+	30% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+	}
+
+	13.33%,
+	20%,
+	26.67% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+	}
+
+	33.33%,
+	100% {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+}
+
+@keyframes tada {
+	from {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+
+	10%,
+	20% {
+		-webkit-transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+		transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+	}
+
+	30%,
+	50%,
+	70%,
+	90% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+	}
+
+	40%,
+	60%,
+	80% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+	}
+
+	to {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+}
+
+/* ANIMATIONS  END*/
